--- a/personal_finance/json_manipulation.ipynb
+++ b/personal_finance/json_manipulation.ipynb
@@ -31572,7 +31572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 477,
+   "execution_count": 526,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31582,6 +31582,238 @@
     "    )\n",
     "    r = r.json()\n",
     "    return r"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "># News Sentiment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 528,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def news_sentiment():\n",
+    "    url = f'https://www.alphavantage.co/query?function=NEWS_SENTIMENT&tickers=AAPL&apikey={alpha_vantage_api}'\n",
+    "    r = requests.get(url)\n",
+    "    r = r.json()\n",
+    "\n",
+    "    return r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 530,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AAPL_sentiment = news_sentiment()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 550,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'title': 'Futures: Bitcoin, Tesla In Focus After Mixed Stock Market Action',\n",
+       "  'overall_sentiment_score': 0.071357},\n",
+       " {'title': 'Stock Market Today: Stocks Finish Mostly Higher After First Citizens Buys SVB Assets',\n",
+       "  'overall_sentiment_score': 0.149302},\n",
+       " {'title': 'P/E Ratio Insights for Apple - Apple  ( NASDAQ:AAPL ) ',\n",
+       "  'overall_sentiment_score': 0.128615},\n",
+       " {'title': 'Dow Jones Gains As Bank Crisis Eases; These 3 Warren Buffett Stocks Eye Entries',\n",
+       "  'overall_sentiment_score': 0.185599},\n",
+       " {'title': '3 charts show U.S. bank failures causing stock-market pain beneath the surface',\n",
+       "  'overall_sentiment_score': -0.130268},\n",
+       " {'title': \"Apple's leap into the metaverse could jolt a sputtering market, but it won't happen overnight\",\n",
+       "  'overall_sentiment_score': -0.002422},\n",
+       " {'title': \"Elon Musk's Neuralink vs. Bill Gates and Jeff Bezos' Synchron: Billionaires Race to Unlock Your Brain\",\n",
+       "  'overall_sentiment_score': 0.170517},\n",
+       " {'title': 'Apple Snaps AI Startup WaveOne Specializing In Compressing Videos - Apple  ( NASDAQ:AAPL ) ',\n",
+       "  'overall_sentiment_score': 0.084193},\n",
+       " {'title': 'Inflation, TikTok, and Other Hot Stories Investors Are Talking About',\n",
+       "  'overall_sentiment_score': 0.082199},\n",
+       " {'title': 'Sentiment Improves Amid Signs of Stability in Regional Banking Stocks, with Fed Speakers Ahead',\n",
+       "  'overall_sentiment_score': -0.057492},\n",
+       " {'title': 'Nasdaq 100: Is a new bull market in place? | The Financial Express',\n",
+       "  'overall_sentiment_score': 0.002457},\n",
+       " {'title': 'Sound Investments: 8 Stocks That Could Help You Get Your Lollapalooza Ticket Money Back - Warner Music Gr  ( NASDAQ:WMG ) , Alphabet  ( NASDAQ:GOOG ) , Alphabet  ( NASDAQ:GOOGL ) , Apple  ( NASDAQ:AAPL ) , Spotify Technology  ( NYSE:SPOT ) , Live Nation Entertainment  ( NYSE:LYV ) , Sirius XM Holdings  ( NASDAQ:SIRI ) , Eventbrite  ( NYSE:EB ) , Tencent Music Enter Gr  ( NYSE:TME ) ',\n",
+       "  'overall_sentiment_score': 0.29371},\n",
+       " {'title': \"Trump's Waco Rally, Bitcoin's Bullish Phase, Musk's Bounty To Twitter Employees And More: 5 Weekend Stories You May Have Missed - Apple  ( NASDAQ:AAPL ) \",\n",
+       "  'overall_sentiment_score': 0.147962},\n",
+       " {'title': 'Apple And 2 Other Stocks Insiders Are Selling - Apple  ( NASDAQ:AAPL ) , Jabil  ( NYSE:JBL ) ',\n",
+       "  'overall_sentiment_score': 0.208448},\n",
+       " {'title': 'Beware: Apple AirTags Used To Track Aussie Tourists - Apple  ( NASDAQ:AAPL ) ',\n",
+       "  'overall_sentiment_score': -0.165911},\n",
+       " {'title': 'Futures Rise As First Citizens Buys Silicon Valley Bank',\n",
+       "  'overall_sentiment_score': 0.185377},\n",
+       " {'title': 'PAGER APPOINTS PETER LICURSI AS CHIEF GROWTH OFFICER',\n",
+       "  'overall_sentiment_score': 0.550608},\n",
+       " {'title': 'Futures Rise; Bank Stocks Jump As Silicon Valley Bank Sold',\n",
+       "  'overall_sentiment_score': 0.051053},\n",
+       " {'title': 'Did Warren Buffett Miss Tesla Train At Bargain $200M Valuation? Elon Musk Reminds Investment Guru Of Lost Opportunity - Tesla  ( NASDAQ:TSLA ) ',\n",
+       "  'overall_sentiment_score': 0.157339},\n",
+       " {'title': 'Is WisdomTree U.S. Quality Dividend Growth ETF  ( DGRW )  a Strong ETF Right Now?',\n",
+       "  'overall_sentiment_score': 0.287863},\n",
+       " {'title': 'Should WisdomTree U.S. LargeCap ETF  ( EPS )  Be on Your Investing Radar?',\n",
+       "  'overall_sentiment_score': 0.221891},\n",
+       " {'title': 'Is John Hancock Multifactor Large Cap ETF  ( JHML )  a Strong ETF Right Now?',\n",
+       "  'overall_sentiment_score': 0.217981},\n",
+       " {'title': 'S&P 500 Records Weekly Gain, Market Volatility Increases - Apple  ( NASDAQ:AAPL ) , Activision Blizzard  ( NASDAQ:ATVI ) ',\n",
+       "  'overall_sentiment_score': 0.11832},\n",
+       " {'title': 'Here Are Tesla, Amazon, Apple Crucial Trading Levels - Apple  ( NASDAQ:AAPL ) , Tesla  ( NASDAQ:TSLA ) , Amazon.com  ( NASDAQ:AMZN ) ',\n",
+       "  'overall_sentiment_score': -0.007394},\n",
+       " {'title': \"Apple's vendor planning to set up second factory, Pegatron explained\",\n",
+       "  'overall_sentiment_score': 0.018816},\n",
+       " {'title': 'The all-new BMW i7: This futuristic, luxury electric sedan is a thrill to drive',\n",
+       "  'overall_sentiment_score': 0.331721},\n",
+       " {'title': 'Futures Rise With No Big Bank News',\n",
+       "  'overall_sentiment_score': 0.058251},\n",
+       " {'title': \"If You Invested $1,000 In Coca Cola Stock When Warren Buffett Did, Here's How Much You'd Have Now - Coca-Cola  ( NYSE:KO ) \",\n",
+       "  'overall_sentiment_score': 0.345858},\n",
+       " {'title': \"Apple's Top Execs Converge At Steve Jobs Theater To Take Stock Of Progress On Mixed Reality Headset - Apple  ( NASDAQ:AAPL ) \",\n",
+       "  'overall_sentiment_score': 0.068169},\n",
+       " {'title': 'Better Buy: Alibaba vs. Shopify',\n",
+       "  'overall_sentiment_score': 0.021916},\n",
+       " {'title': 'Top Wall Street analysts prefer these five stocks despite ongoing uncertainty',\n",
+       "  'overall_sentiment_score': 0.243533},\n",
+       " {'title': '3 No-Brainer Warren Buffett Stocks to Buy Right Now',\n",
+       "  'overall_sentiment_score': 0.287661},\n",
+       " {'title': 'Where Will PayPal Be in 1 Year?',\n",
+       "  'overall_sentiment_score': 0.231353},\n",
+       " {'title': \"Tim Cook Praises Apple's 'Symbiotic' Relationship With China, Despite Country's Increasing Tensions With The U.S. - Apple  ( NASDAQ:AAPL ) \",\n",
+       "  'overall_sentiment_score': 0.172918},\n",
+       " {'title': '3 Robinhood Stocks to Buy Right Now',\n",
+       "  'overall_sentiment_score': 0.317263},\n",
+       " {'title': \"Bank turmoil is boosting appetite for specific sector ETFs. Here's why\",\n",
+       "  'overall_sentiment_score': 0.170322},\n",
+       " {'title': \"Tesla's Aggressive Price Cuts Bite Rivals, Lucid Teams Up With Apple, Ford Teases 'Revolutionary' Next-Gen EV Truck And More: Biggest EV Stories Of The Week - Tesla  ( NASDAQ:TSLA ) , Ford Motor  ( NYSE:F ) , Rivian Automotive  ( NASDAQ:RIVN ) \",\n",
+       "  'overall_sentiment_score': 0.070813},\n",
+       " {'title': '3 Warren Buffett Stocks That Are Crushing the S&P 500 This Year. Are They Still Smart Picks?',\n",
+       "  'overall_sentiment_score': 0.26133},\n",
+       " {'title': \"After TikTok chief's grilling in Washington, Apple's Tim Cook is all smiles in Beijing | Business\",\n",
+       "  'overall_sentiment_score': 0.079037},\n",
+       " {'title': 'Tech Is Moving Away From China. Who Could Benefit.',\n",
+       "  'overall_sentiment_score': -0.047457},\n",
+       " {'title': \"Market Rally Still Hasn't Done This; What To Do Now\",\n",
+       "  'overall_sentiment_score': 0.019531},\n",
+       " {'title': '1 Big Reason to Buy This Nasdaq Stock Hand Over Fist Before It Is Too Late',\n",
+       "  'overall_sentiment_score': 0.215524},\n",
+       " {'title': 'Investor Action Plan: Can The Market Bootstrap Itself To A Strong March Finish?',\n",
+       "  'overall_sentiment_score': 0.131084},\n",
+       " {'title': \"Why Warren Buffett's 1999 Warning Still Applies Today\",\n",
+       "  'overall_sentiment_score': -0.055832},\n",
+       " {'title': \"Visa's stock has paid off big over its 15 years. Can the payments giant continue that success from here?\",\n",
+       "  'overall_sentiment_score': 0.119494},\n",
+       " {'title': \"Bank Fears Come Knocking Again, Rattling Stocks And Keeping Volatility In Driver's Seat\",\n",
+       "  'overall_sentiment_score': 0.026516},\n",
+       " {'title': 'Apple  ( AAPL )  Deepens Focus on Streaming, Movie Business',\n",
+       "  'overall_sentiment_score': 0.315413},\n",
+       " {'title': '2 Dow Stocks To Watch Today', 'overall_sentiment_score': 0.234067},\n",
+       " {'title': 'Check Out What Whales Are Doing With AAPL - Apple  ( NASDAQ:AAPL ) ',\n",
+       "  'overall_sentiment_score': 0.17789},\n",
+       " {'title': 'Better Growth Stock: Apple vs. Microsoft',\n",
+       "  'overall_sentiment_score': 0.363521}]"
+      ]
+     },
+     "execution_count": 550,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[{item:i[item] for item in i if item == 'title' or item == 'overall_sentiment_score'} for i in AAPL_sentiment['feed']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 547,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'ticker': 'META',\n",
+       "  'relevance_score': '0.059268',\n",
+       "  'ticker_sentiment_score': '0.119',\n",
+       "  'ticker_sentiment_label': 'Neutral'},\n",
+       " {'ticker': 'AAPL',\n",
+       "  'relevance_score': '0.088799',\n",
+       "  'ticker_sentiment_score': '0.045161',\n",
+       "  'ticker_sentiment_label': 'Neutral'},\n",
+       " {'ticker': 'C',\n",
+       "  'relevance_score': '0.059268',\n",
+       "  'ticker_sentiment_score': '0.146002',\n",
+       "  'ticker_sentiment_label': 'Neutral'},\n",
+       " {'ticker': 'CSCO',\n",
+       "  'relevance_score': '0.147456',\n",
+       "  'ticker_sentiment_score': '0.077708',\n",
+       "  'ticker_sentiment_label': 'Neutral'},\n",
+       " {'ticker': 'JPM',\n",
+       "  'relevance_score': '0.059268',\n",
+       "  'ticker_sentiment_score': '0.146002',\n",
+       "  'ticker_sentiment_label': 'Neutral'},\n",
+       " {'ticker': 'NKE',\n",
+       "  'relevance_score': '0.118209',\n",
+       "  'ticker_sentiment_score': '0.091048',\n",
+       "  'ticker_sentiment_label': 'Neutral'},\n",
+       " {'ticker': 'ALGN',\n",
+       "  'relevance_score': '0.118209',\n",
+       "  'ticker_sentiment_score': '0.053693',\n",
+       "  'ticker_sentiment_label': 'Neutral'},\n",
+       " {'ticker': 'COIN',\n",
+       "  'relevance_score': '0.059268',\n",
+       "  'ticker_sentiment_score': '-0.022012',\n",
+       "  'ticker_sentiment_label': 'Neutral'},\n",
+       " {'ticker': 'MSFT',\n",
+       "  'relevance_score': '0.147456',\n",
+       "  'ticker_sentiment_score': '0.01934',\n",
+       "  'ticker_sentiment_label': 'Neutral'},\n",
+       " {'ticker': 'BCS',\n",
+       "  'relevance_score': '0.029654',\n",
+       "  'ticker_sentiment_score': '0.0',\n",
+       "  'ticker_sentiment_label': 'Neutral'},\n",
+       " {'ticker': 'TSLA',\n",
+       "  'relevance_score': '0.317403',\n",
+       "  'ticker_sentiment_score': '-0.068628',\n",
+       "  'ticker_sentiment_label': 'Neutral'},\n",
+       " {'ticker': 'FRC',\n",
+       "  'relevance_score': '0.059268',\n",
+       "  'ticker_sentiment_score': '0.037248',\n",
+       "  'ticker_sentiment_label': 'Neutral'},\n",
+       " {'ticker': 'CZBS',\n",
+       "  'relevance_score': '0.029654',\n",
+       "  'ticker_sentiment_score': '0.03599',\n",
+       "  'ticker_sentiment_label': 'Neutral'},\n",
+       " {'ticker': 'FIZN',\n",
+       "  'relevance_score': '0.029654',\n",
+       "  'ticker_sentiment_score': '0.03599',\n",
+       "  'ticker_sentiment_label': 'Neutral'},\n",
+       " {'ticker': 'PANW',\n",
+       "  'relevance_score': '0.118209',\n",
+       "  'ticker_sentiment_score': '0.022603',\n",
+       "  'ticker_sentiment_label': 'Neutral'},\n",
+       " {'ticker': 'CRYPTO:BTC',\n",
+       "  'relevance_score': '0.088799',\n",
+       "  'ticker_sentiment_score': '-0.064337',\n",
+       "  'ticker_sentiment_label': 'Neutral'}]"
+      ]
+     },
+     "execution_count": 547,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "AAPL_sentiment['feed'][0]['ticker_sentiment']"
    ]
   }
  ],
