--- a/nba/nba_api.ipynb
+++ b/nba/nba_api.ipynb
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1276,6 +1276,18 @@
     "Number of players from 1996-2023: {len(player_ID)}\n",
     "Number of teams from 1996-2023: {len(team_ID)}\n",
     "''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = '''But soft what light through yonder window breaks\n",
+    "It is the east and Juliet is the sun\n",
+    "Arise fair sun and kill the envious moon\n",
+    "Who is already sick and pale with grief'''"
    ]
   }
  ],
