--- a/nba/nba_api.ipynb
+++ b/nba/nba_api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        " ['FGM', 'FGA', 'FG_PCT']]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +605,7 @@
        "[539 rows x 33 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,6 +613,56 @@
    "source": [
     "df = pd.DataFrame.from_records(r['resultSets']['rowSet'], columns=pd.MultiIndex.from_tuples(index))\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PLAYER_ID\n",
+      "PLAYER_NAME\n",
+      "TEAM_ID\n",
+      "TEAM_ABBREVIATION\n",
+      "AGE\n",
+      "NICKNAME\n",
+      "Less Than 5 ft. FGM\n",
+      "Less Than 5 ft. FGA\n",
+      "Less Than 5 ft. FG_PCT\n",
+      "5-9 ft. FGM\n",
+      "5-9 ft. FGA\n",
+      "5-9 ft. FG_PCT\n",
+      "10-14 ft. FGM\n",
+      "10-14 ft. FGA\n",
+      "10-14 ft. FG_PCT\n",
+      "15-19 ft. FGM\n",
+      "15-19 ft. FGA\n",
+      "15-19 ft. FG_PCT\n",
+      "20-24 ft. FGM\n",
+      "20-24 ft. FGA\n",
+      "20-24 ft. FG_PCT\n",
+      "25-29 ft. FGM\n",
+      "25-29 ft. FGA\n",
+      "25-29 ft. FG_PCT\n",
+      "30-34 ft. FGM\n",
+      "30-34 ft. FGA\n",
+      "30-34 ft. FG_PCT\n",
+      "35-39 ft. FGM\n",
+      "35-39 ft. FGA\n",
+      "35-39 ft. FG_PCT\n",
+      "40+ ft. FGM\n",
+      "40+ ft. FGA\n",
+      "40+ ft. FG_PCT\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in df.columns.to_flat_index():\n",
+    "    print(\" \".join(i).strip())"
    ]
   },
   {
@@ -1276,18 +1326,6 @@
     "Number of players from 1996-2023: {len(player_ID)}\n",
     "Number of teams from 1996-2023: {len(team_ID)}\n",
     "''')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "text = '''But soft what light through yonder window breaks\n",
-    "It is the east and Juliet is the sun\n",
-    "Arise fair sun and kill the envious moon\n",
-    "Who is already sick and pale with grief'''"
    ]
   }
  ],
