set environment variables in .env

--- a/nba/nba_api.ipynb
+++ b/nba/nba_api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,11 +51,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = \"https://stats.nba.com/stats/leaguedashplayershotlocations?\" # /leaguedashplayerstats?, /playerestimatedmetrics?, /leaguedashplayerclutch?, /leagueleaders? /playergamelogs?, /leaguedashplayershotlocations?\n",
+    "url = \"https://stats.nba.com/stats/leaguedashplayerstats?\" # /leaguedashplayerstats?, /playerestimatedmetrics?, /leaguedashplayerclutch?, /leagueleaders? /playergamelogs?, /leaguedashplayershotlocations?\n",
     "\n",
     "parameters = {\n",
     "'College': '', \n",
@@ -63,7 +63,7 @@
     "'Country': '',\n",
     "'DateFrom': '',\n",
     "'DateTo': '',\n",
-    "'DistanceRange': '5ft Range', # (Only for leaguedashplayershotlocations) 5ft Range, 8ft Range, By Zone\n",
+    "'DistanceRange': '', # (Only for leaguedashplayershotlocations) 5ft Range, 8ft Range, By Zone\n",
     "'Division': '', # Central, Atlantic, Southeast, Southwest, Northwest, Pacific \n",
     "'DraftPick': '', # 1st Round, 2nd Round, 1st Pick, Lottery Pick, Top 5 Pick, Top 10 Pick, Top 15 Pick, Top 20 Pick, Top 25 Pick, Picks 11 Thru 20, Picks 21 Thru 30, Undrafted\n",
     "'DraftYear': '',\n",
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,68 +132,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'name': 'SHOT_CATEGORY',\n",
-       "  'columnsToSkip': 6,\n",
-       "  'columnSpan': 3,\n",
-       "  'columnNames': ['Less Than 5 ft.',\n",
-       "   '5-9 ft.',\n",
-       "   '10-14 ft.',\n",
-       "   '15-19 ft.',\n",
-       "   '20-24 ft.',\n",
-       "   '25-29 ft.',\n",
-       "   '30-34 ft.',\n",
-       "   '35-39 ft.',\n",
-       "   '40+ ft.']},\n",
-       " {'name': 'columns',\n",
-       "  'columnSpan': 1,\n",
-       "  'columnNames': ['PLAYER_ID',\n",
-       "   'PLAYER_NAME',\n",
-       "   'TEAM_ID',\n",
-       "   'TEAM_ABBREVIATION',\n",
-       "   'AGE',\n",
-       "   'NICKNAME',\n",
-       "   'FGM',\n",
-       "   'FGA',\n",
-       "   'FG_PCT',\n",
-       "   'FGM',\n",
-       "   'FGA',\n",
-       "   'FG_PCT',\n",
-       "   'FGM',\n",
-       "   'FGA',\n",
-       "   'FG_PCT',\n",
-       "   'FGM',\n",
-       "   'FGA',\n",
-       "   'FG_PCT',\n",
-       "   'FGM',\n",
-       "   'FGA',\n",
-       "   'FG_PCT',\n",
-       "   'FGM',\n",
-       "   'FGA',\n",
-       "   'FG_PCT',\n",
-       "   'FGM',\n",
-       "   'FGA',\n",
-       "   'FG_PCT',\n",
-       "   'FGM',\n",
-       "   'FGA',\n",
-       "   'FG_PCT',\n",
-       "   'FGM',\n",
-       "   'FGA',\n",
-       "   'FG_PCT']}]"
+       "['PLAYER_ID',\n",
+       " 'PLAYER_NAME',\n",
+       " 'NICKNAME',\n",
+       " 'TEAM_ID',\n",
+       " 'TEAM_ABBREVIATION',\n",
+       " 'AGE',\n",
+       " 'GP',\n",
+       " 'W',\n",
+       " 'L',\n",
+       " 'W_PCT',\n",
+       " 'MIN',\n",
+       " 'FGM',\n",
+       " 'FGA',\n",
+       " 'FG_PCT',\n",
+       " 'FG3M',\n",
+       " 'FG3A',\n",
+       " 'FG3_PCT',\n",
+       " 'FTM',\n",
+       " 'FTA',\n",
+       " 'FT_PCT',\n",
+       " 'OREB',\n",
+       " 'DREB',\n",
+       " 'REB',\n",
+       " 'AST',\n",
+       " 'TOV',\n",
+       " 'STL',\n",
+       " 'BLK',\n",
+       " 'BLKA',\n",
+       " 'PF',\n",
+       " 'PFD',\n",
+       " 'PTS',\n",
+       " 'PLUS_MINUS',\n",
+       " 'NBA_FANTASY_PTS',\n",
+       " 'DD2',\n",
+       " 'TD3',\n",
+       " 'WNBA_FANTASY_PTS',\n",
+       " 'GP_RANK',\n",
+       " 'W_RANK',\n",
+       " 'L_RANK',\n",
+       " 'W_PCT_RANK',\n",
+       " 'MIN_RANK',\n",
+       " 'FGM_RANK',\n",
+       " 'FGA_RANK',\n",
+       " 'FG_PCT_RANK',\n",
+       " 'FG3M_RANK',\n",
+       " 'FG3A_RANK',\n",
+       " 'FG3_PCT_RANK',\n",
+       " 'FTM_RANK',\n",
+       " 'FTA_RANK',\n",
+       " 'FT_PCT_RANK',\n",
+       " 'OREB_RANK',\n",
+       " 'DREB_RANK',\n",
+       " 'REB_RANK',\n",
+       " 'AST_RANK',\n",
+       " 'TOV_RANK',\n",
+       " 'STL_RANK',\n",
+       " 'BLK_RANK',\n",
+       " 'BLKA_RANK',\n",
+       " 'PF_RANK',\n",
+       " 'PFD_RANK',\n",
+       " 'PTS_RANK',\n",
+       " 'PLUS_MINUS_RANK',\n",
+       " 'NBA_FANTASY_PTS_RANK',\n",
+       " 'DD2_RANK',\n",
+       " 'TD3_RANK',\n",
+       " 'WNBA_FANTASY_PTS_RANK']"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "r['resultSets']['headers']"
+    "r['resultSets'][0]['headers']"
    ]
   },
   {
