setup db connection/test

--- a/nba/sql/sqlalchemyv2.ipynb
+++ b/nba/sql/sqlalchemyv2.ipynb
@@ -10,61 +10,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-05-07 20:28:35,134 INFO sqlalchemy.engine.Engine SELECT CAST(SERVERPROPERTY('ProductVersion') AS VARCHAR)\n",
+      "2023-05-07 20:28:35,134 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
+      "2023-05-07 20:28:35,137 INFO sqlalchemy.engine.Engine SELECT schema_name()\n",
+      "2023-05-07 20:28:35,137 INFO sqlalchemy.engine.Engine [generated in 0.00043s] ()\n",
+      "2023-05-07 20:28:35,142 INFO sqlalchemy.engine.Engine SELECT CAST('test max support' AS NVARCHAR(max))\n",
+      "2023-05-07 20:28:35,142 INFO sqlalchemy.engine.Engine [generated in 0.00068s] ()\n",
+      "2023-05-07 20:28:35,146 INFO sqlalchemy.engine.Engine SELECT 1 FROM fn_listextendedproperty(default, default, default, default, default, default, default)\n",
+      "2023-05-07 20:28:35,147 INFO sqlalchemy.engine.Engine [generated in 0.00057s] ()\n",
+      "2023-05-07 20:28:35,153 INFO sqlalchemy.engine.Engine BEGIN (implicit)\n",
+      "2023-05-07 20:28:35,153 INFO sqlalchemy.engine.Engine SELECT DB_NAME()\n",
+      "2023-05-07 20:28:35,154 INFO sqlalchemy.engine.Engine [generated in 0.00119s] ()\n",
+      "2023-05-07 20:28:35,156 INFO sqlalchemy.engine.Engine ROLLBACK\n",
+      "Connection to NBA was successful.\n"
+     ]
+    }
+   ],
    "source": [
     "import sqlalchemy\n",
-    "from sqlalchemy import create_engine\n",
-    "from sqlalchemy.engine import URL\n",
     "from sqlalchemy import text\n",
-    "from dotenv import load_dotenv\n",
     "from functools import partial\n",
-    "import os\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_connection_url(server, database, username, password, port, driver):\n",
-    "    connection_url = URL.create(\n",
-    "        \"mssql+pyodbc\",\n",
-    "        username=username,\n",
-    "        password=password,\n",
-    "        host=server,\n",
-    "        port=port,\n",
-    "        database=database,\n",
-    "        query={\n",
-    "            \"driver\": driver,\n",
-    "            # \"TrustServerCertificate\": \"yes\",\n",
-    "            # \"authentication\": \"ActiveDirectoryIntegrated\",\n",
-    "        }\n",
-    "    )\n",
-    "    return connection_url"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def test_connection(connection_string):\n",
-    "    try:\n",
-    "        # Replace the connection string with your own\n",
-    "        connection_string = connection_string\n",
-    "        engine = create_engine(connection_string, echo=True)\n",
-    "        with engine.connect() as conn:\n",
-    "            result = conn.execute(text(\"SELECT DB_NAME()\")).fetchone()\n",
-    "        assert result[0] is not None\n",
-    "        print(f'Connection to {result[0]} was successful.')\n",
-    "    except Exception as e:\n",
-    "        # If the connection fails, the test will fail with an exception\n",
-    "        assert False, f'Connection test failed: {e}'"
+    "import pandas as pd\n",
+    "from sql_connector import Database"
    ]
   },
   {
@@ -77,25 +51,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mssql+pyodbc://sa:***@localhost:1433/NBA?driver=ODBC+Driver+17+for+SQL+Server"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "server = os.environ.get('server')\n",
-    "database = 'NBA'\n",
-    "username = os.getenv('DB_username')\n",
-    "password = os.getenv('DB_password')\n",
-    "port = os.getenv('port')\n",
-    "driver = 'ODBC Driver 17 for SQL Server'\n",
-    "\n",
-    "CreateURL = partial(create_connection_url, server=server,\n",
-    "                    username=username, password=password, port=port, driver=driver,)\n",
-    "\n",
-    "nba_connection = CreateURL(\n",
-    "    database=database)\n",
-    "\n",
-    "test_connection(nba_connection)\n",
-    "engine = create_engine(url=nba_connection, echo=True)\n"
+    "nba = Database(database='NBA')"
    ]
   },
   {
@@ -116,11 +87,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "player_shotLocations = pd.read_csv(r\"D:\\lianz\\Desktop\\Python\\personal_projects\\nba\\data\\player_shotLocations.csv\")"
+    "player_shotLocations = pd.read_csv(r\"D:\\lianz\\Desktop\\Python\\personal_projects\\nba\\data\\player_shotLocations.csv\", header=[0,1], skipinitialspace=True,)\n",
+    "games_played = pd.read_csv(r\"D:\\lianz\\Desktop\\Python\\personal_projects\\nba\\data\\games_played.csv\", parse_dates=['DateTime'])"
    ]
   },
   {
@@ -137,14 +109,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "create_table = text(\"\"\"\n",
-    "CREATE TABLE player_shotLocations(\n",
+    "create_team_table = text(\"\"\"\n",
+    "CREATE TABLE teams(\n",
+    "team_id INT PRIMARY KEY NOT NULL,\n",
+    "team_name VARCHAR(20),\n",
+    "team_abbreviation CHAR(3),\n",
+    "arena_name VARCHAR(30),\n",
+    "team_year INT\n",
+    ")\n",
+    "\"\"\")\n",
+    "\n",
+    "create_player_table = text(\"\"\"\n",
+    "CREATE TABLE players(\n",
     "player_id INT PRIMARY KEY,\n",
-    "y INT\n",
+    "player_name VARCHAR(30)\n",
     ")\"\"\")\n",
     "\n",
-    "with engine.begin() as conn:\n",
-    "    conn.execute(create_table)"
+    "create_player_team_table = text(\"\"\"\n",
+    "CREATE TABLE player_team_history(\n",
+    "id INT NOT NULL IDENTITY(1,1),\n",
+    "player_id INT FOREIGN KEY REFERENCES players(player_id),\n",
+    "player_age INT,\n",
+    "team_id INT FOREIGN KEY REFERENCES teams(team_id),\n",
+    "year VARCHAR(10)\n",
+    ")\n",
+    "\"\"\")\n",
+    "\n",
+    "with nba.engine.begin() as conn:\n",
+    "    conn.execute(create_team_table)\n",
+    "    conn.execute(create_player_table)\n",
+    "    conn.execute(create_player_team_table)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Add Columns to Table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "add_arena_col = text(\"\"\"\n",
+    "ALTER TABLE teams\n",
+    "ADD arena_name VARCHAR(30);\n",
+    "\"\"\")\n",
+    "\n",
+    "with nba.engine.begin() as conn:\n",
+    "    conn.execute(add_arena_col)"
    ]
   },
   {
@@ -153,6 +170,171 @@
    "metadata": {},
    "source": [
     "## Insert Table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>team_name</th>\n",
+       "      <th>team_abbreviation</th>\n",
+       "      <th>Arena</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DateTime</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2000-10-31 19:30:00</th>\n",
+       "      <td>Charlotte Hornets</td>\n",
+       "      <td>CHH</td>\n",
+       "      <td>Philips Arena</td>\n",
+       "      <td>2000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-10-31 19:30:00</th>\n",
+       "      <td>Cleveland Cavaliers</td>\n",
+       "      <td>CLE</td>\n",
+       "      <td>Continental Airlines Arena</td>\n",
+       "      <td>2000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-10-31 19:30:00</th>\n",
+       "      <td>Washington Wizards</td>\n",
+       "      <td>WAS</td>\n",
+       "      <td>TD Waterhouse Centre</td>\n",
+       "      <td>2000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-10-31 20:00:00</th>\n",
+       "      <td>Milwaukee Bucks</td>\n",
+       "      <td>MIL</td>\n",
+       "      <td>Reunion Arena</td>\n",
+       "      <td>2000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-10-31 20:00:00</th>\n",
+       "      <td>Philadelphia 76ers</td>\n",
+       "      <td>PHI</td>\n",
+       "      <td>Madison Square Garden (IV)</td>\n",
+       "      <td>2000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-03-25 22:00:00</th>\n",
+       "      <td>Philadelphia 76ers</td>\n",
+       "      <td>PHI</td>\n",
+       "      <td>Footprint Center</td>\n",
+       "      <td>2023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-03-31 22:30:00</th>\n",
+       "      <td>Denver Nuggets</td>\n",
+       "      <td>DEN</td>\n",
+       "      <td>Footprint Center</td>\n",
+       "      <td>2023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-04-04 22:00:00</th>\n",
+       "      <td>San Antonio Spurs</td>\n",
+       "      <td>SAS</td>\n",
+       "      <td>Footprint Center</td>\n",
+       "      <td>2023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-04-06 20:00:00</th>\n",
+       "      <td>Portland Trail Blazers</td>\n",
+       "      <td>POR</td>\n",
+       "      <td>Moody Center</td>\n",
+       "      <td>2023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-04-08 16:00:00</th>\n",
+       "      <td>Minnesota Timberwolves</td>\n",
+       "      <td>MIN</td>\n",
+       "      <td>Moody Center</td>\n",
+       "      <td>2023</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2640 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  team_name team_abbreviation  \\\n",
+       "DateTime                                                        \n",
+       "2000-10-31 19:30:00       Charlotte Hornets               CHH   \n",
+       "2000-10-31 19:30:00     Cleveland Cavaliers               CLE   \n",
+       "2000-10-31 19:30:00      Washington Wizards               WAS   \n",
+       "2000-10-31 20:00:00         Milwaukee Bucks               MIL   \n",
+       "2000-10-31 20:00:00      Philadelphia 76ers               PHI   \n",
+       "...                                     ...               ...   \n",
+       "2023-03-25 22:00:00      Philadelphia 76ers               PHI   \n",
+       "2023-03-31 22:30:00          Denver Nuggets               DEN   \n",
+       "2023-04-04 22:00:00       San Antonio Spurs               SAS   \n",
+       "2023-04-06 20:00:00  Portland Trail Blazers               POR   \n",
+       "2023-04-08 16:00:00  Minnesota Timberwolves               MIN   \n",
+       "\n",
+       "                                          Arena  year  \n",
+       "DateTime                                               \n",
+       "2000-10-31 19:30:00               Philips Arena  2000  \n",
+       "2000-10-31 19:30:00  Continental Airlines Arena  2000  \n",
+       "2000-10-31 19:30:00        TD Waterhouse Centre  2000  \n",
+       "2000-10-31 20:00:00               Reunion Arena  2000  \n",
+       "2000-10-31 20:00:00  Madison Square Garden (IV)  2000  \n",
+       "...                                         ...   ...  \n",
+       "2023-03-25 22:00:00            Footprint Center  2023  \n",
+       "2023-03-31 22:30:00            Footprint Center  2023  \n",
+       "2023-04-04 22:00:00            Footprint Center  2023  \n",
+       "2023-04-06 20:00:00                Moody Center  2023  \n",
+       "2023-04-08 16:00:00                Moody Center  2023  \n",
+       "\n",
+       "[2640 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "teams_df = games_played.set_index('DateTime').rename(columns={'Visitor':'team_name', 'Visitor_short':'team_abbreviation',})[['team_name','team_abbreviation','Arena']].drop_duplicates().copy()\n",
+    "teams_df['year'] = teams_df.index.year\n",
+    "teams_df"
    ]
   },
   {
@@ -170,12 +352,12 @@
    "outputs": [],
    "source": [
     "insert_table = text(\"\"\"\n",
-    "INSERT INTO player_shotLocations (player_id, y)\n",
-    "VALUES (:player_id, :y)\n",
+    "INSERT INTO teams (team_id, team_name)\n",
+    "VALUES (:player_id, :player_name)\n",
     "\"\"\")\n",
     "\n",
-    "with engine.begin() as conn:\n",
-    "    conn.execute(insert_table, [{\"player_id\": 1, \"y\": 1}, {\"player_id\": 2, \"y\": 4}],)"
+    "with nba.engine.begin() as conn:\n",
+    "    conn.execute(insert_table, [{\"player_id\": 1, \"player_name\": 1}, {\"player_id\": 2, \"player_name\": 4}],)"
    ]
   },
   {
@@ -188,15 +370,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-05-07 23:04:28,093 INFO sqlalchemy.engine.Engine BEGIN (implicit)\n",
+      "2023-05-07 23:04:28,094 INFO sqlalchemy.engine.Engine \n",
+      "DROP TABLE player_team_history;\n",
+      "DROP TABLE players;\n",
+      "DROP TABLE teams;\n",
+      "\n",
+      "2023-05-07 23:04:28,094 INFO sqlalchemy.engine.Engine [generated in 0.00062s] ()\n",
+      "2023-05-07 23:04:28,108 INFO sqlalchemy.engine.Engine COMMIT\n"
+     ]
+    }
+   ],
    "source": [
     "drop_table = text(\"\"\"\n",
-    "DROP TABLE player_shotLocations\n",
+    "DROP TABLE player_team_history;\n",
+    "DROP TABLE players;\n",
+    "DROP TABLE teams;\n",
     "\"\"\")\n",
     "\n",
-    "with engine.begin() as conn:\n",
+    "with nba.engine.begin() as conn:\n",
     "    conn.execute(drop_table)"
    ]
   }
